RESOLVED FIXED271482
[WGSL] Validate functions missing a return statement
https://bugs.webkit.org/show_bug.cgi?id=271482
Summary [WGSL] Validate functions missing a return statement
Tadeu Zagallo
Reported 2024-03-22 11:47:25 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2024-03-22 11:47:28 PDT
Tadeu Zagallo
Comment 2 2024-03-22 11:50:37 PDT
EWS
Comment 3 2024-03-25 09:51:28 PDT
Committed 276630@main (2fa5e500ae94): <https://commits.webkit.org/276630@main> Reviewed commits have been landed. Closing PR #26329 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.